--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
     </footer>
     <!-- Link JavaScript -->
-    <script type="text/javascript" src="assets/javascript/game.js"></script>    
+    <script type="text/javascript" src="assets/javaScript/game.js"></script>    
     
 </body>
 </html>
